<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Split It</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Contact name</string>
    <string name="button_send">Create contact!</string>
    <string name="title_activity_display_message">New Activity</string>
    <string name="information_text">Amount to the left, contact to the right</string>
    <string name="view_contacts">View contacts</string>
    <string name="amount">Amount</string>
    <string name="contact">Name</string>
    <string name="they_owe_me">They owe me</string>
    <string name="i_owe_them">I owe them</string>
    <string name="startDebtMenu">Debt menu</string>
    <string name="startContactMenu">Contact menu</string>
    <string name="number">Contact phone number</string>
    <string name="erase_contacts">Erase contacts</string>
    <string name="name">Name</string>
    <string name="split_debt">Split a debt</string>
    <string name="title_activity_split_adebt">SplitADebt</string>
    <string name="hello_world">Hello world!</string>
    <string name="splitOnThree">Split on these contacts!</string>
    <string name="title_activity_daniels_test">DanielsTest</string>

</resources>